# tt-linear-pytorch

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: README.md  bench_real_checkpoint.py  bench_real_model.py  bench_tt_linear.py
examples/: compress_linear_layer.py
src/tt_linear/: __init__.py  core.py  profiling.py
tests/: test_core.py
