[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-linear"
version = "0.1.0"
description = "TT-matrix (tensor-train) compressed linear layers for PyTorch — drop-in nn.Linear replacement."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Abdessalem Bal" }
]
keywords = ["pytorch", "tensor-network", "tensor-train", "model-compression", "quantization", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mohamed-bal/tt-linear-pytorch"
Issues = "https://github.com/mohamed-bal/tt-linear-pytorch/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
